--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="row">
       <div class="col"><b>Created by Josan866</b></div>
-      <div class="col-8 text-end">Bei generellen fragen bitte ein <br><a class="text-dark" href="https://discord.gg/RdpsTpxr8w"><b>Ticket</b> auf <b>Discord</b></a> erstellen.</div>
+      <div class="col-8 text-end">Bei generellen fragen bitte ein <br><a class="text-dark" target="_blank" href="https://discord.gg/RdpsTpxr8w"><b>Ticket</b> auf <b>Discord</b></a> erstellen.</div>
     </div>
   </div>
   <div class="col"></div>
