--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
   <body class="bg-success-subtle">
 <nav class="navbar navbar-expand-lg bg-success">
     <div class="container-fluid">
-      <a class="navbar-brand" href=""><b>Forest Network</b></a>
-      <a class="nav-link btn bg-primary" target="_blank" href="https://discord.gg/RfBGwPu2FK"><b>Discord Beitreten</b></a>
+      <div>
+        <a class="navbar-brand" href=""><b>Forest Network</b></a>
+        <a class="navbar-brand bg-primary p-2 rounded-3" target="_blank" href="https://discord.gg/RfBGwPu2FK"><b>Discord Beitreten</b></a>
+      </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="./"><b>Discord Beitreten</b></a>
+            <a class="nav-link" href="./"><b>Lul</b></a>
           </li>
         </ul>
       </div>
