--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <nav class="navbar navbar-expand-lg bg-success">
     <div class="container-fluid">
       <div>
-        <a class="navbar-brand" href=""><b>Forest Network</b></a>
+        <a class="navbar-brand" href="./"><b>Forest Network</b></a>
         <a class="navbar-brand bg-primary p-2 rounded-3" target="_blank" href="https://discord.gg/RfBGwPu2FK"><b>Discord Beitreten</b></a>
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
