--- a/rules.html
+++ b/rules.html
@@ -19,7 +19,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href=""><b>Regeln</b></a>
+            <a class="nav-link" href="./rules"><b>Regeln</b></a>
           </li>
         </ul>
       </div>
