--- a/rules.html
+++ b/rules.html
@@ -3,46 +3,72 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Forest Network Regeln</title>
+    <title>Forest Network Homepage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   </head>
   <body class="bg-success-subtle">
-<nav class="navbar navbar-expand-lg bg-success">
-    <div class="container-fluid">
-      <div>
-        <a class="navbar-brand" href="./"><b>Forest Network</b></a>
-        <a class="navbar-brand bg-primary p-2 rounded-3" target="_blank" href="https://discord.gg/RfBGwPu2FK"><b>Discord Beitreten</b></a>
+    <nav class="navbar navbar-expand-lg bg-success">
+      <div class="container-fluid">
+        <div>
+          <a class="navbar-brand" href="./"><b>Forest Network</b></a>
+          <a class="navbar-brand bg-primary p-2 rounded-3" target="_blank" href="https://discord.gg/RfBGwPu2FK"><b>Discord Beitreten</b></a>
+        </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="./rules"><b>Regeln</b></a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="./rules"><b>Regeln</b></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav> 
-  <br>
-  <div class="row"> 
-  <div class="col"></div>
-  <div class="col-10">
-  <h1>Forest Network</h1>
-  <div class="p-3 rounded-2 bg-light" style="border: 5px var(--bs-success-border-subtle) solid">
-    In <b>Forest Network</b>, der Gamer-Community, treffen Freizeit- und Wettkampffreunde in digitalen Wäldern. Ob "SCP Secret Laboratory"-taktik, "Minecraft"-Abenteuer, "Roblox"-Einfach Spaß haben - hier hast du die Möglichkeit, deine Leidenschaft mit Gleichgesinnten zu leben.<br><br>
-    Dieser Server bietet dir die Chance, in entspannter Atmosphäre Freunde kennenzulernen und Spaß zu haben. Ob du jemanden suchst, mit dem du "SCP Secret Laboratory"-SCPs jagen, "GTA"-Rennen bestreitest, in "Minecraft"-Welten bauen möchtest, "Fallout"-Herausforderungen meisterst, "World of Warcraft"-Reisen unternimmst, in "Fortnite"-dich mit Freunden battlest, in "League of Legends"-Matches kämpfst - die "Forest Network"-Familie erwartet dich mit offenen Armen.<br><br>
-    Ein dicker Ast, an dem die Herzen von Gaming-Fans hängen. Hier findest du Spaß, Spannung, und Leute, die genauso gern zocken, wie du.
-    <div class="text-center"><br><br><div><b>Forest Network</b></div>wo Gaming-Freude wohnt</div>
-    </div>
+    </nav> 
+    <br>
     <div class="row">
-      <div class="col"><b>Created by Josan866</b></div>
-      <div class="col-8 text-end">Bei generellen fragen bitte ein <br><a class="text-dark" target="_blank" href="https://discord.gg/RdpsTpxr8w"><b>Ticket</b> auf <b>Discord</b></a> erstellen.</div>
+      <div class="col"></div>
+      <div class="col-10">
+        <div class=" p-3 rounded-4 bg-dark-subtle" style="border: 5px var(--bs-success-border-subtle) solid">
+          <b>1️. Keine Cheats oder Hacks</b><br>
+          Die Nutzung von Cheats, Hacks oder Exploits ist strengstens verboten.<br><br>
+
+          <b>2️. Spawncamping</b><br>
+          Das Töten im Spawnbereich oder beim Elevator ist nur erlaubt, wenn keine Alternative besteht (z. B. wenn die Nuke gezündet wurde).<br><br>
+
+          <b>3️. Fair Play</b><br>
+          Spiele fair & respektiere die Spielmechaniken. Verboten: Spawncamping, Rollenflucht, übertriebenes Camping etc.<br><br>
+
+          <b>4️. Keine Belästigung</b><br>
+          Kein ständiges Beleidigen, Verhöhnen oder absichtliches Stören anderer Spieler.<br><br>
+
+          <b>5️. Mikrofon-Etikette</b><br>
+          Nutze dein Mikrofon respektvoll.<br>
+          Keine lauten Geräusche, Spam oder übermäßiger Smalltalk.<br>
+          Soundboards nur im Proximity-Chat erlaubt.<br><br>
+
+          <b>6️. Kein Metagaming</b><br>
+          Verwende keine externen Tools (z. B. Discord) für Infos, die du im Spiel nicht wissen solltest.<br><br>
+
+          <b>7️. Absprachen zwischen Teams</b><br>
+          Absprachen (z. B. Chaos + SCPs) nur erlaubt, wenn sie das Spiel nicht unnötig verlängern.<br><br>
+
+          <b>8️. Kein Team-Trolling</b><br>
+          Verboten: Türen schließen, Items klauen, absichtlich trollen oder stören.<br><br>
+
+          <b>9️. Null Toleranz für Diskriminierung</b><br>
+          Kein Sexismus, Rassismus oder Homophobie – absolute No-Go-Zone!<br><br>
+
+          <div class="text-danger"><b>Verstöße können zu Kicks, Banns oder permanentem Ausschluss führen.</b></div>
+        </div>
+        <div class="row">
+          <div class="col"><b>Created by Josan866</b></div>
+          <div class="col-8 text-end">Sollte jemand diese brechen bitte <br>ein <a class="text-dark" target="_blank" href="https://discord.gg/RdpsTpxr8w"><b>Ticket</b> auf <b>Discord</b></a> erstellen.</div>
+        </div>
+      </div>
+      <div class="col"></div>
     </div>
-  </div>
-  <div class="col"></div>
-  </div>
+    <br>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
   </body>
 </html>
