--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="col"></div>
     <div class="col-10">
     <h1>Forest Network</h1>
-    <div class="p-3 rounded-2 bg-light" style="border: 5px var(--bs-success-border-subtle) solid">
+    <div class="p-3 rounded-2 bg-dark-subtle" style="border: 5px var(--bs-success-border-subtle) solid">
       In <b>Forest Network</b>, der Gamer-Community, treffen Freizeit- und Wettkampffreunde in digitalen Wäldern. Ob "SCP Secret Laboratory"-taktik, "Minecraft"-Abenteuer, "Roblox"-Einfach Spaß haben - hier hast du die Möglichkeit, deine Leidenschaft mit Gleichgesinnten zu leben.<br><br>
       Dieser Server bietet dir die Chance, in entspannter Atmosphäre Freunde kennenzulernen und Spaß zu haben. Ob du jemanden suchst, mit dem du "SCP Secret Laboratory"-SCPs jagen, "GTA"-Rennen bestreitest, in "Minecraft"-Welten bauen möchtest, "Fallout"-Herausforderungen meisterst, "World of Warcraft"-Reisen unternimmst, in "Fortnite"-dich mit Freunden battlest, in "League of Legends"-Matches kämpfst - die "Forest Network"-Familie erwartet dich mit offenen Armen.<br><br>
       Ein dicker Ast, an dem die Herzen von Gaming-Fans hängen. Hier findest du Spaß, Spannung, und Leute, die genauso gern zocken, wie du.
