--- a/rules.html
+++ b/rules.html
@@ -29,7 +29,7 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-10">
-        <h1>Regelwerk</h1>
+        <h1 class="text-dark">Regelwerk</h1>
         <div class=" p-3 rounded-4 bg-dark-subtle" style="border: 5px var(--bs-success-border-subtle) solid">
           <b>1️. Keine Cheats oder Hacks</b><br>
           Die Nutzung von Cheats, Hacks oder Exploits ist strengstens verboten.<br><br>
